Обновление до новой локальной версии проекта

--- a/settings.ini
+++ b/settings.ini
@@ -5,3 +5,12 @@ InvX=0
 InvY=0
 Smooth=1
 MinMove=1
+[GUI]
+RouteSlot=3
+AutoBattleAfterRoute=0
+[Routes]
+Slot1=C:\Users\Denis\Documents\Autoit scripts\Denis bot\Denis bot\route\route_1_20260219-231030.log
+Slot2=C:\Users\Denis\Documents\Autoit scripts\Denis bot\route\route_2_20260215-164146.log
+Slot3=C:\Users\Denis\Documents\Autoit scripts\Denis bot\Denis bot\route\route_3_20260220-234329.log
+[Window]
+Title=AION2
